--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "harry",
+  "name": "harryjs",
   "description": "This Package is a CLI to create components for you (in your /src/components/ folder :D",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "./index.js",
+  "bin": {
+    "bundle-component": "./index.js"
+  },
   "license": "MIT",
   "keywords": [
     "yarn",
@@ -17,5 +20,17 @@
     "figlet": "^1.2.4",
     "inquirer": "^7.0.4",
     "mkdirp": "^1.0.3"
-  }
+  },
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bragamat/harryjs.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bragamat/harryjs/issues"
+  },
+  "homepage": "https://github.com/bragamat/harryjs#readme"
 }
