--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "harryjs",
-  "description": "This Package is a CLI to create components for you (in your /src/components/ folder :D",
+  "name": "leviosajs",
+  "description": "This is CLI helps you create components faster",
   "version": "1.0.0",
   "main": "./index.js",
   "bin": {
-    "bundle-component": "./index.js"
+    "accio": "./index.js"
   },
   "license": "MIT",
   "keywords": [
