--- a/package.json
+++ b/package.json
@@ -27,10 +27,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/bragamat/harryjs.git"
+    "url": "git+https://github.com/bragamat/leviosajs.git"
   },
   "bugs": {
-    "url": "https://github.com/bragamat/harryjs/issues"
+    "url": "https://github.com/bragamat/leviosajs/issues"
   },
-  "homepage": "https://github.com/bragamat/harryjs#readme"
+  "homepage": "https://github.com/bragamat/leviosajs#readme"
 }
