--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "inquirer": "^7.0.4",
     "mkdirp": "^1.0.3"
   },
-  "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "node ./helpers/postInstallMessage.js"
   },
   "repository": {
     "type": "git",
