--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.4",
   "main": "./index.js",
   "bin": {
-    "accio": "./index.js",
-    "leviosa new": "./bundlers/createReactApp.js"
+    "accio": "./bundleComponent.js",
+    "leviosa:new": "./bundleReactApp.js"
   },
   "license": "MIT",
   "keywords": [
