adjusted logo url

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,2 @@
 theme: jekyll-theme-minimal
-logo: [./images/doyouevenleviosa2.jpg]
+logo: [https://pa1.narvii.com/6660/c238c33782e1318a08f7778b8890629121d458ac_hq.gif]
