--- a/package.json
+++ b/package.json
@@ -4,17 +4,23 @@
   "version": "1.1.42",
   "main": "./index.js",
   "bin": {
-    "leviosa:accio": "./bundleComponent.js",
-    "leviosa:new": "./bundleReactApp.js",
-    "leviosa:start": "./startApp.js"
+    "leviosa-accio": "./bundleComponent.js",
+    "leviosa-new": "./bundleReactApp.js",
+    "leviosa-start": "./startApp.js"
   },
   "license": "MIT",
   "keywords": [
-    "yarn",
+    "npm",
     "node",
     "fast",
     "react",
-    "components"
+    "components",
+    "leviosajs",
+    "create-react-app",
+    "reactjs",
+    "lighter",
+    "faster",
+    "simpler"
   ],
   "author": "Mateus Braga",
   "dependencies": {
