--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "bin": {
     "leviosa-accio": "./bundleComponent.js",
     "leviosa-new": "./bundleReactApp.js",
-    "leviosa-start": "./startApp.js"
+    "leviosa-start": "./startApp.js",
+    "leviosa-test": "./testApp.js"
   },
   "license": "MIT",
   "keywords": [
