--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "leviosajs",
   "description": "This is CLI helps you create components faster",
-  "version": "1.2.12",
+  "version": "1.2.15",
   "main": "./index.js",
   "bin": {
     "leviosa-accio": "./bundleComponent.js",
     "leviosa-new": "./bundleReactApp.js",
     "leviosa-start": "./startApp.js",
     "leviosa-test": "./testApp.js"
+  },
+  "publishConfig": { 
+    "registry": "https://npm.pkg.github.com/" 
   },
   "license": "MIT",
   "keywords": [
