--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "mkdirp": "^1.0.3"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --watchAll",
     "postinstall": "node ./helpers/postInstallMessage.js"
   },
   "repository": {
@@ -52,6 +52,7 @@
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.3",
     "eslint-plugin-react-hooks": "^1.7.0",
+    "jest": "^25.1.0",
     "prettier": "^1.19.1"
   }
 }
