adjuted script to not keep watching

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "scripts": {
     "test": "jest --watchAll",
+    "test:nowatch": "jest",
     "lint": "./node_modules/.bin/eslint ./helpers ./bundlers --fix",
     "postinstall": "node ./helpers/postInstallMessage.js"
   },
